# multiplayer-game

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.in  requirements_lock.txt
client/: BUILD  app.py  main.py
client/v1/: client.py  dummy_game_with_socket.py  main_client.py
client/v2/: README.md  client.py  client_complex_reference.py  main.py
docs/: README-V2.md
game_assets/: BUILD  interface.py
infra/: BUILD.bazel  README.md  cdk.json  package.json  tsconfig.json
infra/src/: app.ts
infra/src/stacks/: HelloWorldStack.ts
lib/: BUILD
lib/v1/: common.py  config.py  dummy_game.py
lib/v2/: README.md  config.py  game_simple.py
server/: BUILD  main.py
server/v1/: README.md  app.py  async_simple_game_event_queue.py  config.py  dummy_game_with_server_socket.py
server/v2/: README.md  app.py
test/: BUILD  README.md
test/general/: test_client_server.py
test/lib/: test.py  test_dummy_game.py
tools/: README.md  create_env_file.py  emsdk.BUILD
wasm_client/: BUILD
wasm_client/src/: main.cpp
wasm_client/src/utils/: common.cpp  common.h  defs.h  draw.cpp  draw.h  drawHelperFunctions.cpp  drawHelperFunctions.h  init.cpp  init.h  input.cpp  input.h  structs.h
wasm_client/src/utils/gameObjects/: clickSquare.cpp  clickSquare.h
