module(name = "multiplayer-game")

bazel_dep(name = "rules_python", version = "1.0.0")

# https://github.com/bazelbuild/bazel-skylib/blob/main/README.md
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# https://github.com/bazel-contrib/bazel-lib/blob/main/README.md
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")

# https://github.com/aspect-build/rules_lint
bazel_dep(name = "aspect_rules_lint", version = "1.0.8")

# https://github.com/theoremlp/rules_uv
bazel_dep(name = "rules_uv", version = "0.49.0")

python_version = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,  # This might be slowing down builds by adding many more targets
    is_default = True,
    # We can specify the exact version.
    python_version = python_version,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    # We need to use the same version here as in the `python.toolchain` call.
    python_version = python_version,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")

## emsdk
# https://bazel.build/external/migration#fetch-deps-module-extensions
# https://github.com/emscripten-core/emsdk/tree/main/bazel
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "emsdk",
    build_file = "@//:tools/emsdk.BUILD",
    integrity = "sha256-hlz2GEgxWItjWT5JGWSrBonc5mX2AS0OJOR1i27lFkw=",
    url = "https://github.com/emscripten-core/emsdk/archive/refs/tags/4.0.1.zip",
)
